# FFcast

./: .gitignore  .gitmodules  HACKING.markdown  HACKING.md  Makefile  Makefile.am  README  README.asciidoc  TODO  bootstrap  configure.ac  ffcast.1.pod  ffcast.bash  ffcast.in  local.mk  subcmd.bash  subcmd.in  xrectsel.c  zsh_completion
automake.d/: common.am
aux/zsh_completion/: Makefile.am
doc/: .gitignore  Makefile.am  ffcast.1.pod
src/: .gitignore  Makefile.am  ffcast.bash  subcmd.bash
src/xrectsel/: .gitignore  Makefile.am  configure.ac  xrectsel.c
